Creacion de trusted data y de service data.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,3 +36,11 @@ models:
     # Applies to all files under models/example/
     example:
       materialized: view
+  +on_schema_change: "sync_all_columns"
+  +persist_docs:
+    relation: true
+    columns: true
+  trusted-data:
+    materialized: table
+  service-data:
+    materialized: table
